--- a/5.1 - Editing website with JS/Potluck form/styles.css
+++ b/5.1 - Editing website with JS/Potluck form/styles.css
@@ -28,7 +28,11 @@ input[type="text"], textarea, select, #allergies-checkboxes {
   margin-bottom: 15px;
 }
 
-#thank-you-message {
+#allergies-checkboxes {
+  margin-top: 10px;
+} 
+
+#ty-message {
   font-weight: bold;
   font-size: 50px;
 }
