--- a/6 - APIs/chatbot/styles.css
+++ b/6 - APIs/chatbot/styles.css
@@ -1,24 +1,19 @@
 
 body {
   width: 100vw; 
-  height: 100vh;
+  min-height: 100vh;
   margin: 0;
   padding: 0;
   position: relative;
 }
 
-.chat-container {
+#chat-container {
   display: flex;
   flex-direction: column;
-  height: 100vh;
-}
+  min-height: 90vh;
 
-.chat-messages {
-  display: flex;
-  flex-direction: column;
-  overflow-y: auto;
-  padding: 1rem;
-  background-color: #ffffff;
+  padding: 20px;
+  padding-bottom: 100px;
 }
 
 .message {
@@ -28,13 +23,13 @@ body {
   max-width: 75%;
 }
 
-.message.user {
+.user-message {
   background-color: #f1f8e9;
   color: #33691e;
   align-self: flex-end;
 }
 
-.message.bot {
+.bot-message {
   background-color: #e0f7fa;
   color: #00796b;
   align-self: flex-start;
@@ -44,7 +39,7 @@ body {
   margin-left: 15px;
 }
 
-.chat-footer {
+#chat-footer {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -55,6 +50,5 @@ body {
   width: 100%; 
 
   padding: 20px;
-  padding-bottom: 30px;
   background-color: #e6e6e6;
 }
